# Experiment-Broker

./: README.md
deployments/cdk/experiment-broker/: Dockerfile
deployments/terraform/: README.md  deploy_demo.sh  run_demo.sh
deployments/terraform/bootstrap/: default.auto.tfvars  demo.tfvars  dynamo.tf  provider.tf  s3.tf  variables.tf
deployments/terraform/experiment_broker/: README.md  default.auto.tfvars  demo.tfvars  main.tf  provider.tf  variables.tf
deployments/terraform/experiment_broker/modules/kms_key/: kms.tf  outputs.tf  variables.tf
deployments/terraform/experiment_broker/modules/s3_experiments_upload/: README.md  outputs.tf  s3.tf  variables.tf
deployments/terraform/experiment_broker/modules/ssm_documents/: ssm.tf
deployments/terraform/experiment_broker_pipeline/: buildspecs.tf  cloudwatch.tf  codebuild.tf  codepipeline.tf  codestar.tf  default.auto.tfvars  demo.tfvars  iam.tf  provider.tf  s3.tf  variables.tf
deployments/terraform/experiment_broker_pipeline/buildspecs/: buildspec-lambda.yaml
experiment_code/: setup.cfg
experiment_code/lambda/: handler.py
experiment_code/tests/example_experiments/: Demo-Kubernetes(EKS)-Worker Node (EC2)-Network-Latency.yml
experiment_code/tests/journals/: experiment_journals2024-01-18-19_02_00.json
modules/: README.md
modules/chaos-toolkit-lite/: README.md
modules/chaos-toolkit-lite/chaos_toolkit_lite/chaoslib/: exceptions.py  experiment.py  loader.py  method.py  types.py
modules/experiment-broker/experiment_code/: setup.cfg  test.py
(+18 files in other folders)
