[aliases]
release = sdist bdist_wheel
test = pytest

[wheel]
universal = 0

[metadata]
name = activities
version = attr: activities.__version__
author = Vertical Relevance
url = https://github.com/VerticalRelevance/Experiment-Broker
description = Code for the Vertical Relevance Resiliency Framework   

[options]
packages = find:
install_requires =
    boto3
    opensearch-py
    kafka-python
    logzero

[options.packages.find]
exclude =
    lambda*